--- a/src/resources/css/main/style.css
+++ b/src/resources/css/main/style.css
@@ -983,7 +983,7 @@ input[type="checkbox"] {
 =============================================*/
 .scroll-top {
   position: fixed;
-  right: 30px;
+  left: 30px;
   bottom: -60px;
   z-index: 999;
   -webkit-box-shadow: 0 30px 50px rgba(0, 0, 0, 0.03);
@@ -1021,7 +1021,7 @@ input[type="checkbox"] {
 .scroll-top.show {
   visibility: visible;
   opacity: 1;
-  bottom: 60px;
+  bottom: 30px;
 }
 
 .scroll-top i {
