--- a/src/resources/css/main/style.css
+++ b/src/resources/css/main/style.css
@@ -2130,7 +2130,7 @@ input[type="checkbox"] {
 }
 
 .submenu-wrapper.is-sticky {
-  position: fixed;
+  position: sticky;
   top: 0;
   left: 0;
   width: 100%;
